--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
       position: relative;
       text-align: center
     }
+
+    @keyframes fade-in {
+        from {opacity: 0}
+        to {opacity: 1}
+    }
   </style>
 </head>
 
