second workout row

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,35 @@
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <title>Metolius Training</title>
+  <style>
+    body {
+      margin: 0;
+      user-select: none;
+      font-family: 'Luckiest Guy', cursive;
+      font-weight: 400;
+      text-transform: uppercase;
+      color: #fff;
+    }
+
+    #root {
+      height: 100vh;
+      padding: 5vh;
+      box-sizing: border-box;
+      background: #15246d;
+      position: relative;
+      text-align: center;
+    }
+
+    @keyframes fade-in {
+      from {
+        opacity: 0
+      }
+
+      to {
+        opacity: 1
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -16,6 +45,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+
 </body>
 
 </html>
