--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     }
 
     #root {
-      height: 100vh;
+      min-height: 100vh;
       padding: 5vh;
       box-sizing: border-box;
       background: #15246d;
